Comments (collapsed): Fix cropped tooltips (more options menu)
Make sure tooltips appear aligned to the right inside of its
container

note: changing overflow property on the element
.lokdialog.ui-dialog-content does not solve it properly without
sacrificing the vertical scrollbar (even when targeting
x y separately)

--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -577,6 +577,12 @@ nav.drawing-color-indicator ~ #main-document-content .loleaflet-annotation-reply
 	transition: all 0.1s ease 0.5s;
 	visibility: visible;
 }
+.loleaflet-annotation-collapsed [data-title]:hover:after {
+	position: static;
+	float: right;
+	margin-top: 22px;
+	margin-right: 8px;
+}
 [data-title]:after {
 	content: attr(data-title);
 	font-size: 1em !important;
